Added auto-linking of URL's, email addresses, and phone numbers

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": "^6.10.0"
   },
   "dependencies": {
+    "autolinker": "^1.4.3",
     "axios": "^0.15.3",
     "babel-polyfill": "^6.22.0",
     "enzyme": "^2.7.1",
