--- a/package.json
+++ b/package.json
@@ -13,57 +13,55 @@
     "lint:watch": "onchange ./src --initial -- yarn run lint",
     "lint:watch-npm": "onchange ./src --initial -- npm run lint"
   },
-  "engines": {
-    "node": "^6.10.0"
-  },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.19.2",
     "babel-polyfill": "^6.22.0",
-    "enzyme": "^2.7.1",
-    "lodash": "^4.17.4",
+    "enzyme": "^3.11.0",
+    "lodash": "^4.17.15",
     "moment": "^2.18.1",
-    "query-string": "^4.3.4",
-    "react": "^15.4.2",
-    "react-datepicker": "^0.46.0",
-    "react-dom": "^15.4.2",
+    "query-string": "^6.11.0",
+    "react": "^16.12.0",
+    "react-datepicker": "^2.13.0",
+    "react-dom": "^16.12.0",
     "react-ga": "^2.2.0",
-    "react-icons": "^2.2.3",
-    "react-router-dom": "~4.1.1",
-    "serve": "^5.1.1"
+    "react-icons": "^3.9.0",
+    "react-router-dom": "~5.1.2",
+    "serve": "^11.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
+    "autoprefixer": "^9.7.4",
     "babel-core": "^6.22.1",
-    "babel-jest": "^19.0.0",
-    "babel-loader": "^6.2.10",
+    "babel-jest": "^25.1.0",
+    "babel-loader": "^7",
     "babel-plugin-lodash": "^3.2.11",
     "babel-preset-env": "^1.1.10",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
-    "extract-text-webpack-plugin": "v2.0.0",
-    "file-loader": "^0.10.0",
-    "html-webpack-plugin": "^2.28.0",
-    "jest": "^19.0.2",
-    "jsdom": "^9.10.0",
-    "node-sass": "^4.5.0",
-    "onchange": "~3.2.1",
-    "postcss-loader": "^1.2.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
+    "jsdom": "^16.2.0",
+    "node-sass": "4.12.0",
+    "onchange": "~6.1.0",
+    "postcss-loader": "^3.0.0",
     "react-addons-test-utils": "^15.4.2",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^5.0.1",
-    "sinon": "^2.1.0",
+    "rimraf": "^3.0.2",
+    "sass-loader": "^8.0.2",
+    "sinon": "^9.0.0",
     "sinon-stub-promise": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0",
-    "webpack-merge": "^2.6.1"
+    "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   }
 }
