--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^25.1.0",
     "jsdom": "^16.2.0",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.12.0",
     "onchange": "~6.1.0",
     "postcss-loader": "^3.0.0",
     "react-addons-test-utils": "^15.4.2",
